
*************************************************
**
**	CHANGELOG.txt
**
**	This document gives an overview of changes
**	made to Wosaic between releases.
**
**	Last Updated: 2/17/08
**
**
*************************************************


** 0.1-beta2
***********************************

-- Expand support for all natively-handled image types, including PNG and GIF